--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
 
-            <main class="col-md-9" itemscope itemtype="http://schema.org/Article">
+            <main class="col-md-9" itemscope itemtype="http://schema.org/Person">
                 <h2 class="mb-4">Green Day</h2>
                 <p class="mb-4">Green Day adalah salah satu band punk rock paling berpengaruh di dunia yang dibentuk pada tahun 1987 di California, Amerika Serikat. 
                     Band ini terdiri dari Billie Joe Armstrong (vokal dan gitar), Mike Dirnt (bass), dan Tré Cool (drum). Green Day dikenal dengan lagu-lagu yang penuh 
