--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     memperkuat posisi mereka sebagai band yang tidak hanya populer, tetapi juga relevan secara politis. Dengan gaya khas mereka yang menggabungkan 
                     melodi pop dengan energi punk, Green Day telah menginspirasi generasi baru musisi dan penggemar di seluruh dunia. Berikut 2 album yang terkenal :</p>
 
-                <div class="row" itemscope itemtype="http://schema.org/ImageObject">
+                <div class="row">
                     <div class="col-md-6 mb-3">
                         <p>American Idiot</p>
                         <img src="Source/album1.jpg" alt="Album Greenday" class="img-album">
