--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </nav>
 
             <main class="col-md-9" itemscope itemtype="http://schema.org/Person">
-                <h2 class="mb-4">Green Day</h2>
+                <h2 class="mb-4"><span itemprop="name">Green Day</span></h2>
                 <p class="mb-4">Green Day adalah salah satu band punk rock paling berpengaruh di dunia yang dibentuk pada tahun 1987 di California, Amerika Serikat. 
                     Band ini terdiri dari Billie Joe Armstrong (vokal dan gitar), Mike Dirnt (bass), dan Tré Cool (drum). Green Day dikenal dengan lagu-lagu yang penuh 
                     semangat dan lirik yang tajam, mencakup tema pemberontakan, kritik sosial, dan isu-isu pribadi. Album mereka yang paling ikonik, "Dookie" (1994), 
