--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         <footer class="footer" itemscope itemtype="http://schema.org/Organization">
             <p>&copy; 2024 Hazart Website.</p>
             <p>Contact me on
-                <a href="https://instagram.com/hazwiaf" target="_blank" rel="noopener noreferrer">
+                <a class="u-url" href="https://instagram.com/hazwiaf" target="_blank" rel="noopener noreferrer">
                 <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
                 </a>
-                <a href="https://wa.me/+6282163943831" target="_blank" rel="noopener noreferrer">
+                <a class="u-url" href="https://wa.me/+6282163943831" target="_blank" rel="noopener noreferrer">
                 <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
                 </a>   
             </p>
